Ass-1/getting_started/test_files/syntax_errors/InvalidPrintStatement.cpm
class MyClass {
  Init(): boolean {
    print(int) //@error - syntax (invalid print statement: type used as expression)
  }
}

main() : int {
  print(MyClass().Init())
  return 0
}